--- a/user/themes/mytheme/blueprints.yaml
+++ b/user/themes/mytheme/blueprints.yaml
@@ -442,12 +442,12 @@ form:
               underline: true
             display_of_git_sync_repo_link:
               type: select
-              size: medium
+              size: small
               classes: fancy
               label: 'Location of Git Sync Link'
               default: page
               options:
-                page: Page
+                page: 'Page'
                 none: None
             type_of_git_sync_repo_link:
               type: select
@@ -464,8 +464,8 @@ form:
             custom_git_sync_repo_link_icon:
               type: input.text
               size: small
-              label: 'Custom Font Awesome Icon'
-              description: 'Short name, e.g. ''code-fork''.'
+              label: 'Custom SVG Icon'
+              description: "Available SVG icon via Grav Premium SVG Icons Plugin, for example 'brands/git.svg' "
               validate:
                 type: text
             custom_git_sync_repo_link_text:
