--- a/user/config/system.yaml
+++ b/user/config/system.yaml
@@ -111,6 +111,8 @@ cache:
   allow_webserver_gzip: false
   redis:
     socket: false
+    password: null
+    database: null
 twig:
   cache: true
   debug: true
@@ -172,6 +174,7 @@ session:
   httponly: true
   samesite: Lax
   split: true
+  domain: null
   path: null
 gpm:
   releases: stable
